# agentic-weather-forecast

./: .gitignore  README.md  main.py  pyproject.toml
src/agentic_weather_forecast/: __main__.py
src/agentic_weather_forecast/api/: app.py  parser.py  schemas.py
src/agentic_weather_forecast/api/routes/: chat.py  health.py  weather.py
src/agentic_weather_forecast/core/: settings.py
src/agentic_weather_forecast/graph/: nodes.py  state.py  workflow.py
src/agentic_weather_forecast/llm/: gemini_client.py
src/agentic_weather_forecast/tools/: weather_forecast.py
test/api/: test_parser.py  test_schemas.py
test/core/: test_settings.py
