[project]
name = "agentic-weather-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.137.0",
    "geopy>=2.4.1",
    "ipython>=9.14.1",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.5",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3",
]

[project.scripts]
agentic-weather-forecast = "agentic_weather_forecast.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
